--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
-    background: url('background-desktop.jpg') no-repeat center center fixed;
+    background: url('background.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 
@@ -50,8 +50,7 @@ section {
     outline: none;
     font-size: 15px;
     transition: 0.4s;
-    border-bottom: 1px solid
-#ddd;
+    border-bottom: 1px solid #ddd;
 }
 
 .active, .accordion:hover {
@@ -84,7 +83,7 @@ footer {
 
 @media (max-width: 768px) {
     body {
-        background: url('background-mobile.jpg') no-repeat center center fixed;
+        background: url('background.jpg') no-repeat center center fixed;
         background-size: cover;
         text-align: left;
         padding: 10px;
