--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,8 @@ header {
     position: relative;
 }
 
-.logo {
-    width: 100px;
+.prometej.jpg {
+    width: 200px;
     height: auto;
     position: absolute;
     top: 10px;
