--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ header {
     position: relative;
 }
 
-.prometej.jpg {
+.resize img {
     width: 200px;
     height: auto;
     position: absolute;
